php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49064 --enable-session=shared does not work
Submitted: 2009-07-26 15:01 UTC Modified: 2009-07-26 23:22 UTC
From: php-bugs at vandekamer dot com Assigned: jani (profile)
Status: Closed Package: Session related
PHP Version: 5.3.0 OS: Linux
Private report: No CVE-ID: None
 [2009-07-26 15:01 UTC] php-bugs at vandekamer dot com
Description:
------------
A build with --enabled-session=shared compiles as expected a session.so. The module loads correctly, but when we start a session it raises the following error:

/usr/bin/php-cgi: symbol lookup error: /usr/lib/php/20090626/session.so: undefined symbol: php_url_scanner_reset_vars


When we repeat the build with exactly the same parameters except the =shared part, everything works fine. Of course with a buildin session.

Reproduce code:
---------------
Build a php-cgi with the following ./configure:

	--with-layout=GNU
	--with-config-file-path=/etc/php
	--with-config-file-scan-dir=/etc/php/conf.d
	--prefix=/usr
	--mandir=/usr/share/man
	--disable-all
	--enable-session
	--enable-cgi
	--disable-cli



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-07-26 23:20 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=286379
Log: - Fixed bug #49064 (--enable-session=shared does not work: undefined symbol:
  php_url_scanner_reset_vars). (Jani)

# Note: This does not exist in PHP_5_2. Merged there as well to keep these files synced.
 [2009-07-26 23:22 UTC] jani@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 16:00:01 2026 UTC