- Fixed bug #49064 (--enable-session=shared does not work: undefined symbol:   php_url_scanner_reset_vars). (Jani)

# Note: This does not exist in PHP_5_2. Merged there as well to keep these files synced.